# SimpleFE1DCalc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/SimpleFE1DCalc/: SimpleFE1DCalc.hpp
test/: CMakeLists.txt  test.cpp
